--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+    
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  --gradient-gray: linear-gradient(to right, #131314, #3A3A3A, #131314);
+  --gradient-purple: linear-gradient(
+    to right,
+    rgba(171, 6, 213, 0.7),
+    rgba(141, 6, 213, 0.3),
+    rgba(6, 6, 6, 0.3)
+  );  --gradient-purple2: linear-gradient(to right, #060606 1%,#AB06D5 100%);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
   }
+  * {
+    box-sizing: border-box; 
+}
+img {
+  margin: 0;
+  padding: 0; 
+  display: block; 
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+
+  
+  .gradient-purple {
+    background: var(--gradient-purple);
+  }
+  
+  .gradient-purple2 {
+    background: var(--gradient-purple2);
+  }
+
+  .gradient-gray {
+    background: var(--gradient-gray);
+  }
+
+  body{
+    background-color: black;
+  }
+
+  
