--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,6 +21,13 @@ img {
   margin: 0;
   padding: 0; 
   display: block; 
+}
+/* styles/globals.css */
+body {
+  background-image: url('/Assets/vector.png');
+  /* background-size: cover; Ensures the background image covers the entire area */
+  /* background-position: center; Centers background image */
+  opacity: 1; 
 }
 
 
