--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,27 @@
     
 :root {
   --gradient-gray: linear-gradient(to right, #131314, #3A3A3A, #131314);
-  --gradient-purple: linear-gradient(
+  --gradient-right: linear-gradient(
     to right,
-    rgba(171, 6, 213, 0.7),
-    rgba(141, 6, 213, 0.3),
-    rgba(6, 6, 6, 0.3)
-  );  --gradient-purple2: linear-gradient(to right, #060606 1%,#AB06D5 100%);
+    /* rgba(171, 6, 213, 0.7) 30% ,
+    rgba(14, 12, 15, 0.3)  10%,
+    rgba(212, 33, 141, 0.3) 30% */
+
+
+    rgba(169, 0, 41, 0.1) 0%, 
+    rgba(11, 2, 7, 0.2) 90%, 
+    rgba(169, 0, 41, 0.1)  
+
+  ); 
+  --gradient-bottom: linear-gradient(
+    to bottom,
+    rgba(231, 144, 166, 0.1) 10%,   /* Light dark red at the top */
+    rgba(11, 2, 7, 0.2) 90%,     /* Darker color near the bottom */
+    rgba(23, 21, 21, 0.1) 10%    /* Light dark red at the bottom */
+);
+
+  
+  --gradient-purple2: linear-gradient(to right, #060606 1%,#AB06D5 100%);
   --gradient-bg: linear-gradient(to bottom, #060606 50%,#AB06D5 100%);
 
   }
@@ -35,7 +50,11 @@ body {
 
   
   .gradient-purple {
-    background: var(--gradient-purple);
+    background: var(--gradient-right);
+    background: var(--gradient-bottom);
+
+
+
   }
   
   .gradient-purple2 {
@@ -106,4 +125,7 @@ body {
 
 
 
+.gradient-middle {
+  background: linear-gradient(to top, #A90029 40%, #ffffff 60%);
+}
 
