--- a/app/globals.css
+++ b/app/globals.css
@@ -5,69 +5,38 @@
 @tailwind components;
 @tailwind utilities;
     
+
+
 :root {
   --gradient-gray: linear-gradient(to right, #131314, #3A3A3A, #131314);
-  --gradient-right: linear-gradient(
-    to right,
-    /* rgba(171, 6, 213, 0.7) 30% ,
-    rgba(14, 12, 15, 0.3)  10%,
-    rgba(212, 33, 141, 0.3) 30% */
-
-
-    rgba(169, 0, 41, 0.1) 0%, 
-    rgba(11, 2, 7, 0.2) 90%, 
-    rgba(169, 0, 41, 0.1)  
-
-  ); 
-  --gradient-bottom: linear-gradient(
-    to bottom,
-    rgba(231, 144, 166, 0.1) 10%,   /* Light dark red at the top */
-    rgba(11, 2, 7, 0.2) 90%,     /* Darker color near the bottom */
-    rgba(23, 21, 21, 0.1) 10%    /* Light dark red at the bottom */
-);
-
-  
-  --gradient-purple2: linear-gradient(to right, #060606 1%,#AB06D5 100%);
-  --gradient-bg: linear-gradient(to bottom, #060606 50%,#AB06D5 100%);
+   --gradient-purple: linear-gradient(to right, #060606 1%,#AB06D5 100%);
 
   }
+
   * {
     box-sizing: border-box; 
 }
-img {
+/* img {
   margin: 0;
   padding: 0; 
   display: block; 
-}
+} */
+
+
 /* styles/globals.css */
 body {
-  background-image: url('/Assets/vector.png');
-  /* background-size: cover; Ensures the background image covers the entire area */
-  /* background-position: center; Centers background image */
-  opacity: 1; 
+ background-color: black;
+  /* background-image: url('/Assets/vector.png'); */
 }
 
 
   
   .gradient-purple {
-    background: var(--gradient-right);
-    background: var(--gradient-bottom);
-
-
-
+    background: var(--gradient-purple);
   }
   
-  .gradient-purple2 {
-    background: var(--gradient-purple2);
-  }
+ 
 
-  .gradient-gray {
-    background: var(--gradient-gray);
-  }
-
-  body{
-    background-color: black;
-  }
   .my-masonry-grid {
     display: -webkit-box; /* Not needed if autoprefixing */
     display: -ms-flexbox; 
@@ -82,7 +51,8 @@ body {
   
   /* Style your items */
   .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
-    background: rgb(231, 228, 228);
+    background-color:white;
+    opacity: 0.9;
     margin-bottom: 30px;
   }
 
@@ -112,10 +82,16 @@ body {
 
 /* Inner stroke effect */
 .stroke-effect {
-  color: white; 
+  color: transparent; 
   -webkit-text-stroke: 1px black;
   text-shadow: 
-    2px 2px 0 #ffffff;    /* Shadow slightly inward (to the right and below) */
+    2px 2px 0 #ffffff;   
+}
+.stroke-effect-sm{
+  color: transparent; 
+  -webkit-text-stroke: 1px black;
+  text-shadow: 
+    1.5px 1.5px 0 #ffffff;   
 }
 /* styles/globals.css */
 .gradient-border{
