--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,9 @@ body {
   .gradient-purple {
     background: var(--gradient-purple);
   }
+  .gradient-gray{
+    background: var(--gradient-gray);
+  }
   
  
 
@@ -86,6 +89,12 @@ body {
   -webkit-text-stroke: 1px black;
   text-shadow: 
     2px 2px 0 #ffffff;   
+}
+.stroke-effect-blur{
+  color: transparent; 
+  -webkit-text-stroke: 1.2px black;
+  text-shadow: 
+    2px 2px 1 #ffffff;   
 }
 .stroke-effect-sm{
   color: transparent; 
