--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,6 @@ body {
   /* Style your items */
   .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
     background-color:white;
-    opacity: 0.9;
     margin-bottom: 30px;
   }
 
@@ -81,7 +80,14 @@ body {
 .animate-loop-scroll {
   animation: loop-scroll 35s linear infinite; 
   display: flex; 
+ 
 } 
+.side-fade{
+  -webkit-mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent);
+  mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent);
+  -webkit-mask-size: 100% 100%;  
+  mask-size: 100% 100%;  
+}
 
 /* Inner stroke effect */
 .stroke-effect {
